# wordle-solver

./: .gitignore
src/: CMakeLists.txt  Main  Main.cpp
src/Main.dSYM/Contents/Resources/DWARF/: Main
